--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,5 @@
-:root {
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
+@import url('https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@400;500;600;700&display=swap');
+
+* {
+  font-family: 'Plus Jakarta Sans', sans-serif;
 }
